prod/workloads/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-application
  namespace: prod
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.chart-image: semver:~8.0
  labels:
    app: web-application
    workshop: workshop
spec:
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: web-application
  template:
    metadata:
      labels:
        app: web-application
        workshop: workshop
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - web-application
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: web-application
          image: bashofmann/k8s-workshop-web-application:8.0.1
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /etc/web-application
              name: web-application-secret
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            timeoutSeconds: 1
            initialDelaySeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            timeoutSeconds: 1
            failureThreshold: 3
      volumes:
        - name: web-application-secret
          secret:
            secretName: web-application-secret
