prod/workloads/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-application
  namespace: prod
  labels:
    app: web-application
    workshop: workshop
spec:
  type: ClusterIP
  ports:
    -
      name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: web-application
